Fixing comment alignment.

--- a/yumeiro/style.css
+++ b/yumeiro/style.css
@@ -145,7 +145,7 @@ div.tagcloud {
 
 .comments-link {
 	position: relative;
-	left: 30px;
+	left: 40px;
 	display: block;
 	float: left;
 }
